--- a/WebGL-Pixi/public/views/Player.xml
+++ b/WebGL-Pixi/public/views/Player.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <sc>
-	<g id="unknown_1" x="0" y="0" ax="0" ay="0" sx="1" sy="1" rz="0" t="1">
-		<g id="Video_Surface_View_3" x="0" y="0" ax="960" ay="540" sx="1" sy="1" rz="0" t="1">
-			<i id="Video_Surface_View_VideoNode_4" x="0" y="0" ax="0" ay="0" sx="1" sy="1" rz="0" t="1" w="1280" h="720"/>
+	<g id="unknown_1" x="0" y="0" ax="0" ay="0" sx="1" sy="1" rz="0" t="1" v="1">
+		<g id="Video_Surface_View_3" x="0" y="0" ax="640" ay="360" sx="1" sy="1" rz="0" t="1" v="1">
+			<i id="Video_Surface_View_VideoNode_4" x="0" y="0" ax="0" ay="0" sx="1" sy="1" rz="0" t="1" v="1" w="1280" h="720"/>
 		</g>
-		<g id="Playback_Controls_5" x="0" y="0" ax="960" ay="540" sx="1" sy="1" rz="0" t="1">
-			<i id="Gradient_Player_png_6" x="959.5" y="532" ax="0.5" ay="274" sx="1" sy="1" rz="0" t="0" w="0.666667" h="365.333" url="Gradient-Player.png"/>
-			<g id="Arrow_Container_7" x="727" y="1063" ax="234" ay="22" sx="1" sy="1" rz="0" t="0">
-				<g id="Btn_FastForward_8" x="332.75" y="0" ax="67.5" ay="22" sx="1" sy="1" rz="0" t="0">
-					<g id="Mover_9" x="48.625" y="22" ax="0" ay="0" sx="1" sy="1" rz="0" t="1">
-						<i id="Dot_Large_2_10" x="-29.375" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Medium_2_11" x="-51.5" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Small_2_12" x="-95.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="ArrowFFW_Unfocused_png_13" x="-13.125" y="-22" ax="14.5" ay="22" sx="1" sy="1" rz="0" t="1" w="19.3333" h="29.3333" url="ArrowFFW-Unfocused.png"/>
-						<i id="ArrowFFW_Focused_png_14" x="-13.125" y="-21.5" ax="14.5" ay="21.5" sx="1" sy="1" rz="0" t="0" w="19.3333" h="28.6667" url="ArrowFFW-Focused.png"/>
-						<i id="Dot_Large_15" x="-51.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Medium_16" x="-69" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Small_17" x="-95.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+		<g id="Playback_Controls_5" x="0" y="0" ax="640" ay="360" sx="1" sy="1" rz="0" t="1" v="1">
+			<i id="Gradient_Player_png_6" x="639.667" y="354.667" ax="0.333333" ay="182.667" sx="1960" sy="1" rz="0" t="1" v="1" w="0.666667" h="365.333" url="Gradient-Player.png"/>
+			<g id="Arrow_Container_7" x="484.667" y="535.333" ax="156" ay="14.6667" sx="1" sy="1" rz="0" t="1" v="1">
+				<g id="Btn_FastForward_8" x="221.833" y="0" ax="45" ay="14.6667" sx="1" sy="1" rz="0" t="1" v="1">
+					<g id="Mover_9" x="32.4167" y="14.6667" ax="0" ay="0" sx="1" sy="1" rz="0" t="1" v="1">
+						<i id="Dot_Large_2_10" x="-19.5833" y="-5.33333" ax="5" ay="5.33333" sx="0.5" sy="0.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Medium_2_11" x="-34.3333" y="-5.33333" ax="5" ay="5.33333" sx="0.7" sy="0.7" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Small_2_12" x="-63.9167" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="ArrowFFW_Unfocused_png_13" x="-8.75" y="-14.6667" ax="9.66667" ay="14.6667" sx="1" sy="1" rz="0" t="1" v="1" w="19.3333" h="29.3333" url="ArrowFFW-Unfocused.png"/>
+						<i id="ArrowFFW_Focused_png_14" x="-8.75" y="-14.3333" ax="9.66667" ay="14.3333" sx="1" sy="1" rz="0" t="0" v="1" w="19.3333" h="28.6667" url="ArrowFFW-Focused.png"/>
+						<i id="Dot_Large_15" x="-34.5833" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Medium_16" x="-46" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Small_17" x="-63.9167" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
 					</g>
 					<a id="JumpIn_Btn_FastForward_8" d="0.166" r="0">
 						<at t="2" f="Dot_Large_2_10.translation">
@@ -869,16 +869,16 @@
 						</at>
 					</a>
 				</g>
-				<g id="Btn_Rewind_18" x="0.125" y="0" ax="67.5" ay="22" sx="1" sy="1" rz="180" t="0">
-					<g id="Mover_19" x="48.625" y="22" ax="0" ay="0" sx="1" sy="1" rz="0" t="1">
-						<i id="Dot_Large_2_20" x="-29.375" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Medium_2_21" x="-51.5" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Small_2_22" x="-95.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="ArrowFFW_Unfocused_png_23" x="-13.125" y="-22" ax="14.5" ay="22" sx="1" sy="1" rz="0" t="1" w="19.3333" h="29.3333" url="ArrowFFW-Unfocused.png"/>
-						<i id="ArrowFFW_Focused_png_24" x="-13.125" y="-21.5" ax="14.5" ay="21.5" sx="1" sy="1" rz="0" t="0" w="19.3333" h="28.6667" url="ArrowFFW-Focused.png"/>
-						<i id="Dot_Large_25" x="-51.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Medium_26" x="-69" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
-						<i id="Dot_Small_27" x="-95.875" y="-8" ax="7.5" ay="8" sx="1" sy="1" rz="0" t="0" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+				<g id="Btn_Rewind_18" x="0.0833333" y="0" ax="45" ay="14.6667" sx="1" sy="1" rz="180" t="1" v="1">
+					<g id="Mover_19" x="32.4167" y="14.6667" ax="0" ay="0" sx="1" sy="1" rz="0" t="1" v="1">
+						<i id="Dot_Large_2_20" x="-19.5833" y="-5.33333" ax="5" ay="5.33333" sx="0.5" sy="0.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Medium_2_21" x="-34.3333" y="-5.33333" ax="5" ay="5.33333" sx="0.7" sy="0.7" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Small_2_22" x="-63.9167" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="ArrowFFW_Unfocused_png_23" x="-8.75" y="-14.6667" ax="9.66667" ay="14.6667" sx="1" sy="1" rz="0" t="1" v="1" w="19.3333" h="29.3333" url="ArrowFFW-Unfocused.png"/>
+						<i id="ArrowFFW_Focused_png_24" x="-8.75" y="-14.3333" ax="9.66667" ay="14.3333" sx="1" sy="1" rz="0" t="0" v="1" w="19.3333" h="28.6667" url="ArrowFFW-Focused.png"/>
+						<i id="Dot_Large_25" x="-34.5833" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Medium_26" x="-46" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
+						<i id="Dot_Small_27" x="-63.9167" y="-5.33333" ax="5" ay="5.33333" sx="1.5" sy="1.5" rz="0" t="0" v="1" w="10" h="10.6667" url="ArrowFFW-Dot.png"/>
 					</g>
 					<a id="JumpIn_Btn_Rewind_18" d="0.166" r="0">
 						<at t="2" f="Dot_Large_2_20.translation">
@@ -1756,14 +1756,14 @@
 					</at>
 				</a>
 			</g>
-			<g id="PlayPause_Container_28" x="897.5" y="1022.5" ax="62.5" ay="62.5" sx="1" sy="1" rz="0" t="0">
-				<g id="Btn_PlayPause_29" x="0" y="0" ax="62.5" ay="62.5" sx="1" sy="1" rz="0" t="0">
-					<i id="Btn_PlayPause_Unfocused_png_30" x="7.5" y="7.5" ax="55" ay="55" sx="1" sy="1" rz="0" t="1" w="73.3333" h="73.3333" url="Btn-PlayPause-Unfocused.png"/>
-					<g id="Scaling_31" x="12.5" y="12.5" ax="50" ay="50" sx="1" sy="1" rz="0" t="1">
-						<i id="Btn_Red_Ring_png_32" x="-5" y="-5" ax="55" ay="55" sx="1" sy="1" rz="0" t="0" w="73.3333" h="73.3333" url="Btn-Red-Ring.png"/>
-						<i id="Btn_Red_png_33" x="-5" y="-5" ax="55" ay="55" sx="1" sy="1" rz="0" t="0" w="73.3333" h="73.3333" url="Btn-Red.png"/>
-						<i id="Btn_Pause_png_34" x="32" y="28" ax="18" ay="22" sx="1" sy="1" rz="0" t="0" w="24" h="29.3333" url="Btn-Pause.png"/>
-						<i id="Btn_Play_png_35" x="35" y="25" ax="20" ay="25" sx="1" sy="1" rz="0" t="1" w="26.6667" h="33.3333" url="Btn-Play.png"/>
+			<g id="PlayPause_Container_28" x="598.333" y="508.333" ax="41.6667" ay="41.6667" sx="1" sy="1" rz="0" t="1" v="1">
+				<g id="Btn_PlayPause_29" x="0" y="0" ax="41.6667" ay="41.6667" sx="1" sy="1" rz="0" t="1" v="1">
+					<i id="Btn_PlayPause_Unfocused_png_30" x="5" y="5" ax="36.6667" ay="36.6667" sx="1" sy="1" rz="0" t="0" v="1" w="73.3333" h="73.3333" url="Btn-PlayPause-Unfocused.png"/>
+					<g id="Scaling_31" x="8.33333" y="8.33333" ax="33.3333" ay="33.3333" sx="1" sy="1" rz="0" t="1" v="1">
+						<i id="Btn_Red_Ring_png_32" x="-3.33333" y="-3.33333" ax="36.6667" ay="36.6667" sx="1" sy="1" rz="0" t="1" v="1" w="73.3333" h="73.3333" url="Btn-Red-Ring.png"/>
+						<i id="Btn_Red_png_33" x="-3.33333" y="-3.33333" ax="36.6667" ay="36.6667" sx="1" sy="1" rz="0" t="0" v="1" w="73.3333" h="73.3333" url="Btn-Red.png"/>
+						<i id="Btn_Pause_png_34" x="21.3333" y="18.6667" ax="12" ay="14.6667" sx="1" sy="1" rz="0" t="1" v="1" w="24" h="29.3333" url="Btn-Pause.png"/>
+						<i id="Btn_Play_png_35" x="23.3333" y="16.6667" ax="13.3333" ay="16.6667" sx="1" sy="1" rz="0" t="0" v="1" w="26.6667" h="33.3333" url="Btn-Play.png"/>
 					</g>
 					<a id="FocusIn_Btn_PlayPause_29" d="0.166" r="0">
 						<at t="1" f="Btn_PlayPause_Unfocused_png_30.opacity">
@@ -2154,16 +2154,16 @@
 					</at>
 				</a>
 			</g>
-			<t id="Placeholder_Time_36" rz="0" t="0" x="1131" y="475" ax="0" ay="12.1666" sx="1" sy="1" c="0xFFFFFFFF" fe="0" ff="Arial" fs="Regular" fw="1" fz="17" w="126.033" h="22.4267" tj="left" ft="00:00:00"/>
-			<g id="Player_Scrubber_37" x="144" y="728" ax="816" ay="146.5" sx="1" sy="1" rz="0" t="0">
-				<g id="Player_ScrollBar_38" x="120" y="-2" ax="696" ay="148.5" sx="1" sy="1" rz="0" t="1">
-					<i id="Progress_Track_Tip_Left_39" x="0" y="252.5" ax="3" ay="6" sx="1" sy="1" rz="180" t="1" w="4" h="8" url="Progress-Bar-Tip-White.png"/>
-					<i id="Progress_Track_Tip_Right_40" x="1386" y="252.5" ax="3" ay="6" sx="1" sy="1" rz="0" t="1" w="4" h="8" url="Progress-Bar-Tip-White.png"/>
-					<s id="Progress_Track_41" x="6" y="252.5" ax="690" ay="6" sx="1" sy="1" rz="0" t="0.3" w="920" h="8" c="0xF1F1F1FF"/>
-					<i id="Progress_Bar_Tip_Left_42" x="0" y="252.5" ax="3" ay="6" sx="1" sy="1" rz="0" t="0" w="4" h="8" url="Progress-Bar-Tip-Red.png"/>
-					<i id="Progress_Bar_Tip_Right_43" x="1386" y="252.5" ax="3" ay="6" sx="1" sy="1" rz="180" t="0" w="4" h="8" url="Progress-Bar-Tip-Red.png"/>
-					<s id="Progress_Bar_44" x="6" y="252.5" ax="0" ay="6" sx="1" sy="1" rz="0" t="1" w="920" h="8" c="0xDF1D46FF"/>
-					<i id="Thumb_45" x="-13.75" y="242.5" ax="15" ay="15" sx="1" sy="1" rz="0" t="1" w="20" h="20" url="Scrubber-Thumb.png"/>
+			<t id="Placeholder_Time_36" rz="0" t="1" v="1" x="1131" y="475" ax="0" ay="12.1666" sx="1" sy="1" c="0xFFFFFFFF" fe="0" ff="Arial" fs="Regular" fw="1" fz="17" w="126.033" h="22.4267" tj="left" ft="00:00:00"/>
+			<g id="Player_Scrubber_37" x="96" y="312" ax="544" ay="97.6667" sx="1" sy="1" rz="0" t="1" v="1">
+				<g id="Player_ScrollBar_38" x="80" y="-1.33333" ax="464" ay="99" sx="1" sy="1" rz="0" t="1" v="1">
+					<i id="Progress_Track_Tip_Left_39" x="0" y="168.333" ax="2" ay="4" sx="1" sy="1" rz="180" t="1" v="1" w="4" h="8" url="Progress-Bar-Tip-White.png"/>
+					<i id="Progress_Track_Tip_Right_40" x="924" y="168.333" ax="2" ay="4" sx="1" sy="1" rz="0" t="1" v="1" w="4" h="8" url="Progress-Bar-Tip-White.png"/>
+					<s id="Progress_Track_41" x="4" y="168.333" ax="460" ay="4" sx="1" sy="1" rz="0" t="0.3" v="1" w="920" h="8" c="0xF1F1F1FF"/>
+					<i id="Progress_Bar_Tip_Left_42" x="0" y="168.333" ax="2" ay="4" sx="1" sy="1" rz="0" t="0" v="1" w="4" h="8" url="Progress-Bar-Tip-Red.png"/>
+					<i id="Progress_Bar_Tip_Right_43" x="924" y="168.333" ax="2" ay="4" sx="1" sy="1" rz="180" t="0" v="1" w="4" h="8" url="Progress-Bar-Tip-Red.png"/>
+					<s id="Progress_Bar_44" x="4" y="168.333" ax="0" ay="4" sx="0" sy="1" rz="0" t="1" v="1" w="920" h="8" c="0xDF1D46FF"/>
+					<i id="Thumb_45" x="-8.88707" y="161.667" ax="10" ay="10" sx="1.2" sy="1.2" rz="0" t="1" v="1" w="20" h="20" url="Scrubber-Thumb.png"/>
 					<a id="ScrollStart_Player_ScrollBar_38" d="1.666" r="0">
 						<at t="1" f="Progress_Bar_Tip_Left_42.opacity">
 							<k t="0" x="0"/>
@@ -2203,21 +2203,21 @@
 					</a>
 				</g>
 			</g>
-			<g id="Btn_Back_Container_46" x="1687" y="79.5" ax="50" ay="40.5" sx="1" sy="1" rz="0" t="0">
-				<g id="Btn_Back_47" x="0" y="0" ax="50" ay="40.5" sx="1" sy="1" rz="0" t="0">
-					<g id="Scaler_48" x="50" y="40.5" ax="0" ay="-0.25" sx="1" sy="1" rz="0" t="1">
-						<i id="Btn_Back_Border_png_49" x="-40" y="-40.25" ax="40" ay="40" sx="1" sy="1" rz="0" t="1" w="53.3333" h="53.3333" url="Btn-Back-Border.png"/>
-						<i id="Btn_Back_Border_Selected_png_50" x="-40" y="-40.5" ax="40" ay="40" sx="1" sy="1" rz="0" t="0" w="53.3333" h="53.3333" url="Btn-Back-Border-Selected.png"/>
-						<i id="Btn_Back_Filled_png_51" x="-40" y="-40.5" ax="40" ay="40" sx="1" sy="1" rz="0" t="0" w="53.3333" h="53.3333" url="Btn-Back-Filled.png"/>
-						<i id="Btn_Back_Arrow_png_52" x="-20" y="-15.5" ax="20" ay="15" sx="1" sy="1" rz="0" t="1" w="26.6667" h="20" url="Btn-Back-Arrow.png"/>
-						<s id="White_Solid_4_53" x="4.30556" y="11.2535" ax="0" ay="1.5" sx="1" sy="1" rz="0" t="1" w="5.33333" h="2" c="0xF1F1F1FF"/>
-						<s id="White_Solid_2_54" x="10.9722" y="-5.48264" ax="0" ay="1.5" sx="1" sy="1" rz="180" t="1" w="16.6667" h="2" c="0xF1F1F1FF"/>
-						<s id="White_Solid_5_55" x="-18.6111" y="-4.57986" ax="0" ay="1.5" sx="1" sy="1" rz="-45" t="1" w="9.33333" h="2" c="0xF1F1F1FF"/>
-						<s id="White_Solid_3_56" x="-18.5417" y="-7.21875" ax="0" ay="1.5" sx="1" sy="1" rz="45" t="1" w="9.33333" h="2" c="0xF1F1F1FF"/>
-						<i id="Arrow_Piece_png_57" x="10.5009" y="5.47222" ax="-0.492188" ay="-1" sx="1" sy="1" rz="24.3746" t="0" w="6" h="6" url="Arrow-Piece.png"/>
-						<i id="Arrow_Piece_png_58" x="10.5009" y="5.47222" ax="-0.492188" ay="-1" sx="1" sy="1" rz="8.55111" t="0" w="6" h="6" url="Arrow-Piece.png"/>
-						<i id="Arrow_Piece_png_59" x="10.5009" y="5.47222" ax="-0.492188" ay="-1" sx="1" sy="1" rz="8.55111" t="0" w="6" h="6" url="Arrow-Piece.png"/>
-						<i id="Arrow_Piece_png_60" x="10.5009" y="5.47222" ax="-0.492188" ay="-1" sx="1" sy="1" rz="8.55111" t="0" w="6" h="6" url="Arrow-Piece.png"/>
+			<g id="Btn_Back_Container_46" x="1124.67" y="53" ax="33.3333" ay="27" sx="1" sy="1" rz="0" t="1" v="1">
+				<g id="Btn_Back_47" x="0" y="0" ax="33.3333" ay="27" sx="1" sy="1" rz="0" t="1" v="1">
+					<g id="Scaler_48" x="33.3333" y="27" ax="0" ay="-0.166667" sx="0.9" sy="0.9" rz="0" t="1" v="1">
+						<i id="Btn_Back_Border_png_49" x="-26.6667" y="-26.8333" ax="26.6667" ay="26.6667" sx="1" sy="1" rz="0" t="1" v="1" w="53.3333" h="53.3333" url="Btn-Back-Border.png"/>
+						<i id="Btn_Back_Border_Selected_png_50" x="-26.6667" y="-27" ax="26.6667" ay="26.6667" sx="1" sy="1" rz="0" t="0" v="1" w="53.3333" h="53.3333" url="Btn-Back-Border-Selected.png"/>
+						<i id="Btn_Back_Filled_png_51" x="-26.6667" y="-27" ax="26.6667" ay="26.6667" sx="1" sy="1" rz="0" t="0" v="1" w="53.3333" h="53.3333" url="Btn-Back-Filled.png"/>
+						<i id="Btn_Back_Arrow_png_52" x="-13.3333" y="-10.3333" ax="13.3333" ay="10" sx="1" sy="1" rz="0" t="1" v="1" w="26.6667" h="20" url="Btn-Back-Arrow.png"/>
+						<s id="White_Solid_4_53" x="2.87037" y="7.50231" ax="0" ay="1" sx="0" sy="1.11111" rz="0" t="1" v="1" w="5.33333" h="2" c="0xF1F1F1FF"/>
+						<s id="White_Solid_2_54" x="7.31481" y="-3.65509" ax="0" ay="1" sx="0" sy="1.11111" rz="180" t="1" v="1" w="16.6667" h="2" c="0xF1F1F1FF"/>
+						<s id="White_Solid_5_55" x="-12.4074" y="-3.05324" ax="0" ay="1" sx="0" sy="1.11111" rz="-45" t="1" v="1" w="9.33333" h="2" c="0xF1F1F1FF"/>
+						<s id="White_Solid_3_56" x="-12.3611" y="-4.8125" ax="0" ay="1" sx="0" sy="1.11111" rz="45" t="1" v="1" w="9.33333" h="2" c="0xF1F1F1FF"/>
+						<i id="Arrow_Piece_png_57" x="7.00058" y="3.64815" ax="-0.328125" ay="-0.666667" sx="1.11111" sy="1.11111" rz="24.3746" t="0" v="1" w="6" h="6" url="Arrow-Piece.png"/>
+						<i id="Arrow_Piece_png_58" x="7.00058" y="3.64815" ax="-0.328125" ay="-0.666667" sx="1.11111" sy="1.11111" rz="8.55111" t="0" v="1" w="6" h="6" url="Arrow-Piece.png"/>
+						<i id="Arrow_Piece_png_59" x="7.00058" y="3.64815" ax="-0.328125" ay="-0.666667" sx="1.11111" sy="1.11111" rz="8.55111" t="0" v="1" w="6" h="6" url="Arrow-Piece.png"/>
+						<i id="Arrow_Piece_png_60" x="7.00058" y="3.64815" ax="-0.328125" ay="-0.666667" sx="1.11111" sy="1.11111" rz="8.55111" t="0" v="1" w="6" h="6" url="Arrow-Piece.png"/>
 					</g>
 					<a id="FocusIn_Btn_Back_47" d="0.333" r="0">
 						<at t="1" f="Btn_Back_Border_png_49.opacity">
