--- a/WebGL-Pixi/public/views/Player.xml
+++ b/WebGL-Pixi/public/views/Player.xml
@@ -2204,7 +2204,7 @@
 				</g>
 			</g>
 			<g id="Btn_Back_Container_46" x="1124.67" y="53" ax="33.3333" ay="27" sx="1" sy="1" rz="0" t="1" v="1">
-				<g id="Btn_Back_47" x="0" y="0" ax="33.3333" ay="27" sx="1" sy="1" rz="0" t="1" v="1">
+				<g id="Btn_Back_47" i="1" x="0" y="0" ax="33.3333" ay="27" sx="1" sy="1" rz="0" t="1" v="1">
 					<g id="Scaler_48" x="33.3333" y="27" ax="0" ay="-0.166667" sx="0.9" sy="0.9" rz="0" t="1" v="1">
 						<i id="Btn_Back_Border_png_49" x="-26.6667" y="-26.8333" ax="26.6667" ay="26.6667" sx="1" sy="1" rz="0" t="1" v="1" w="53.3333" h="53.3333" url="Btn-Back-Border.png"/>
 						<i id="Btn_Back_Border_Selected_png_50" x="-26.6667" y="-27" ax="26.6667" ay="26.6667" sx="1" sy="1" rz="0" t="0" v="1" w="53.3333" h="53.3333" url="Btn-Back-Border-Selected.png"/>
